# minpiler

./: .gitignore  .travis.yml  README.md  emu.py  mind.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
minpiler/: __init__.py  __main__.py  cmdline.py  emu.py  mast.py  mind.py  mparse.py  optimizer.py  test_utils.py  typeshed.py  utils.py
samples/: control.py  drawing.py  followme.py  helloworld.py  monoai.py  pyratite.py  rounddance.py  surge.py
tests/: test_emu.py  test_py.py
